--- a/bookr_server/templates/reviews/search-results.html
+++ b/bookr_server/templates/reviews/search-results.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Search Results: {{ search_text }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>Search Results for <em>{{ search_text }}</em></h1>
-</body>
-</html>
+{% endblock %}
